add alpha oracle trainer, add divide and conquer svd